# Copyright © SixtyFPS GmbH <info@slint-ui.com>
# SPDX-License-Identifier: GPL-3.0-only OR LicenseRef-Slint-commercial

[package]
name = "gstreamer"
version = "0.2.1"
authors = ["Slint Developers <info@slint-ui.com>"]
edition = "2021"
build = "build.rs"
license = "GPL-3.0-only OR LicenseRef-Slint-commercial"
publish = false

[[bin]]
path = "main.rs"
name = "gstreamer"

[dependencies]
slint = { version="1.7.0", default-features=false, features=["compat-1-2","std","backend-winit", "renderer-skia-opengl"] }

gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", rev = "36eca7cc" , features = ["v1_24", "serde"]}
gstreamer-gl = {git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", rev = "36eca7cc"}
gstreamer-gl-egl = {git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", rev = "36eca7cc", features = ["v1_24",]}
gstreamer-app = {git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", rev = "36eca7cc", features = ["v1_24"]}
gstreamer-video = {git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", rev = "36eca7cc", features = ["v1_24", "serde"]}
anyhow = "1.0"
glutin_egl_sys = "0.1.5"

[build-dependencies]
slint-build = { path = "../../api/rs/build" }
